# trusty-search

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.claude-mpm/: WORKFLOW.md
.claude/commands/: health.md
.github/workflows/: ci.yml  publish.yml
crates/trusty-common/: Cargo.toml
crates/trusty-common/src/: lib.rs
crates/trusty-embedder/: Cargo.toml
crates/trusty-embedder/src/: lib.rs
crates/trusty-mcp-core/: Cargo.toml
crates/trusty-mcp-core/src/: lib.rs
crates/trusty-search-core/: Cargo.toml
crates/trusty-search-core/src/: blame.rs  bm25.rs  chunker.rs  classifier.rs  complexity.rs  concept_cluster.rs  embed.rs  entity.rs  facts.rs  indexer.rs  lib.rs  mmr.rs  ner.rs  output.rs  registry.rs  scip_ingest.rs  store.rs  symbol_graph.rs
crates/trusty-search-mcp/: Cargo.toml
crates/trusty-search-mcp/src/: lib.rs  sse.rs  stdio.rs  tools.rs
crates/trusty-search-service/: Cargo.toml  build.rs
crates/trusty-search-service/src/: client.rs  daemon.rs  indexed_files.rs  lib.rs  reindex.rs  server.rs  ui.rs  walker.rs  watch_loop.rs  watcher.rs
crates/trusty-search-service/ui-dist/assets/: index-MAaTHGhf.css
src/: doctor.rs  lib.rs  main.rs
src/commands/: add.rs  convert.rs  daemon_guard.rs  daemon_utils.rs  dashboard.rs  doctor.rs  doctor_checks.rs  doctor_pipeline.rs  format.rs  index.rs  index_resolve.rs  init.rs  integrate.rs  list.rs  migrate.rs  mod.rs  query.rs  reindex.rs  remove.rs  search.rs  serve.rs  service.rs  start.rs  status.rs  stop.rs  ui.rs  watch.rs
src/core/: bm25.rs  chunker.rs  classifier.rs  entity.rs  indexer.rs  memguard.rs  memory_policy.rs  mod.rs  registry.rs  repo_config.rs  scip_ingest.rs  store.rs  symbol_graph.rs
src/core/chunker/: walk.rs
src/core/indexer/: mod.rs  search.rs  tests.rs
src/mcp/: tools.rs
src/service/: config.rs  daemon.rs  mod.rs  persistence.rs  persistence_loader.rs  reindex.rs  server.rs  ui.rs  walker.rs  watch_loop.rs  watcher.rs
tests/: benchmark_harness.rs  integration_tests.rs
ui/: index.html  package-lock.json  vite.config.js
ui-dist/: index.html
ui-dist/assets/: index-7A3K_FVM.js  index-CVWZG1wG.js  index-rdaSAo7A.js
ui/src/: App.svelte  app.css  main.js
ui/src/components/: Admin.svelte  Chat.svelte  Collections.svelte  Search.svelte  Sidebar.svelte  TopBar.svelte
ui/src/lib/: api.js  state.svelte.js  stores.svelte.js
ui/src/lib/views/: Dashboard.svelte
