[workspace]
members = [
    "crates/trusty-search-core",
    "crates/trusty-search-service",
    "crates/trusty-search-mcp",
    ".",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "2"
indicatif = "0.17"
dotenvy = "0.15"
include_dir = "0.7"
open = "5"
libc = "0.2"
trusty-mcp-core = { version = "0.1.0" }
trusty-embedder = { version = "0.1.1" }
trusty-common = { version = "0.1.2" }

# Local development override: use the in-tree `../trusty-common` workspace so
# unreleased changes are picked up without a release cycle. Cargo requires
# every crate exported from the patched source to be listed even if not all
# are consumed.
#
# Re-enabled (commit ac13d01 finished the axum 0.7 → 0.8 migration that
# previously blocked this override). Required so the `cuda` feature on
# `trusty-search-core` resolves against the in-tree `trusty-embedder 0.1.1`
# (which adds `cuda`) until that version is published to crates.io.
#
# To build trusty-search standalone (without `../trusty-common` checked out),
# comment this block out AND ensure trusty-embedder >=0.1.1 is published.
[patch.crates-io]
trusty-common = { path = "../trusty-common/crates/trusty-common" }
trusty-embedder = { path = "../trusty-common/crates/trusty-embedder" }
trusty-mcp-core = { path = "../trusty-common/crates/trusty-mcp-core" }

[package]
name = "trusty-search"
version = "0.1.61"
edition = "2021"
description = "Machine-wide hybrid code search service: BM25 + vector + KG, zero cold-start, MCP server"
license = "MIT"
repository = "https://github.com/bobmatnyc/trusty-search"
homepage = "https://github.com/bobmatnyc/trusty-search"
keywords = ["search", "code-search", "mcp", "vector-search", "bm25"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "trusty-search"
path = "src/main.rs"

[dependencies]
trusty-search-core = { version = "0.1.7", path = "crates/trusty-search-core" }
trusty-search-service = { version = "0.1.7", path = "crates/trusty-search-service" }
trusty-search-mcp = { version = "0.1.7", path = "crates/trusty-search-mcp" }
trusty-common = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
dirs = "5"
fs4 = { version = "0.8", features = ["sync"] }
walkdir = "2"
open = { workspace = true }
libc = "0.2"
eventsource-stream = "0.2"
futures-util = "0.3"

[dev-dependencies]
walkdir = "2"
tokio = { workspace = true }

[features]
default = []
# GPU-accelerated embedding via fastembed-rs CUDA backend.
# Requires CUDA toolkit + compatible NVIDIA GPU. Install with:
#   cargo install trusty-search --features cuda
cuda = ["trusty-search-core/cuda"]
