[package]
name = "trusty-search"
version = "0.3.31"
edition = "2021"
description = "Machine-wide hybrid code search service: BM25 + vector + KG, zero cold-start, MCP server"
license = "MIT"
repository = "https://github.com/bobmatnyc/trusty-search"
homepage = "https://github.com/bobmatnyc/trusty-search"
keywords = ["search", "code-search", "mcp", "vector-search", "bm25"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"
include = [
    "src/**/*",
    "build.rs",
    "ui-dist/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
name = "trusty_search"
path = "src/lib.rs"

[[bin]]
name = "trusty-search"
path = "src/main.rs"

# Local development override: use the in-tree `../trusty-common` workspace so
# unreleased changes are picked up without a release cycle. Cargo requires
# every crate exported from the patched source to be listed even if not all
# are consumed.
#
# To build trusty-search standalone (without `../trusty-common` checked out),
# comment this block out AND ensure trusty-embedder >=0.1.1 is published.
[patch.crates-io]
trusty-common = { path = "../trusty-common/crates/trusty-common" }
trusty-embedder = { path = "../trusty-common/crates/trusty-embedder" }
trusty-mcp-core = { path = "../trusty-common/crates/trusty-mcp-core" }
trusty-symgraph = { path = "../trusty-common/crates/trusty-symgraph" }

[dependencies]
# ── Shared trusty-common crates ────────────────────────────────────────────
trusty-common = { version = "0.3.2", features = ["axum-server"] }
trusty-mcp-core = { version = "0.1.0" }
trusty-embedder = { version = "0.1.3", features = ["test-support"] }
trusty-symgraph = { version = "0.2.1", default-features = false }  # contracts surface only — no tree-sitter

# ── Async runtime / HTTP ───────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
futures = "0.3"
futures-util = "0.3"

# ── Serde / errors / logs ──────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde_yml = "0.0"
glob = "0.3"

# ── CLI / UX ───────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "2"
indicatif = "0.17"
dotenvy = "0.15"
open = "5"

# ── Storage / vector / KG / chunking ───────────────────────────────────────
usearch = "2.25"
redb = "2.6"
dashmap = "5"
petgraph = "0.6"
lru = "0.12"
# Clustering deps are only compiled when the `clustering` feature is enabled.
# Why: linfa + ndarray pull in a deep BLAS/numerical stack that significantly
# slows cold compile time even though only `core::concept_cluster` consumes
# them. Off by default; turn on with `--features clustering` to enable
# ConceptCluster entities derived from doc-comment k-means clustering.
linfa = { version = "0.7", optional = true }
linfa-clustering = { version = "0.7", optional = true }
ndarray = { version = "0.15", optional = true }
ndarray-rand = { version = "0.14", optional = true }
rand = "0.8"
rayon = "1"
sha2 = "0.10"
regex = "1"

# ── Tree-sitter grammars (ABI 14 pinned) ───────────────────────────────────
tree-sitter = "0.24"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-scala = "0.24"
tree-sitter-c-sharp = "=0.23.0"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "=0.6.0"

# ── File watching / FS ─────────────────────────────────────────────────────
notify = "6"
notify-debouncer-mini = "0.4"
fs4 = { version = "0.8", features = ["sync"] }
walkdir = "2"
crossbeam-utils = "0.8"
dirs = "5"

# ── Process memory introspection (TRUSTY_MEMORY_LIMIT_MB, peak RSS log) ────
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# ── Embedded UI ────────────────────────────────────────────────────────────
include_dir = "0.7"

# ── Optional ONNX NER (feature-gated) ──────────────────────────────────────
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "user"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[features]
default = []
# Exposes test doubles (e.g. `MockEmbedder`) outside `cfg(test)` so
# downstream integration tests can reuse them. Kept for parity with the
# previous trusty-search-core feature surface.
test-support = []
# Compile in the ONNX NER extractor. Even with this feature on, NER stays
# inert at runtime unless `~/.trusty-search/models/ner.onnx` is present.
ner = ["dep:ort", "dep:tokenizers"]
# GPU-accelerated embedding via fastembed-rs CUDA backend.
cuda = ["trusty-embedder/cuda"]
# Deprecated: CoreML / Metal GPU acceleration is now auto-detected at runtime
# on Apple Silicon and requires no opt-in. The `coreml` feature is kept as a
# no-op alias for backward compatibility so `cargo install --features coreml`
# still works.
coreml = ["trusty-embedder/coreml"]
# ConceptCluster entities via k-means over doc-comment embeddings (issue #108).
# Off by default — pulls in linfa, linfa-clustering, ndarray, and
# ndarray-rand, which materially extend cold compile time. Enable with
# `cargo build --features clustering` when ConceptCluster entities are
# desired in the KG / BM25 enrichment passes.
clustering = ["dep:linfa", "dep:linfa-clustering", "dep:ndarray", "dep:ndarray-rand"]
