[package]
name = "trusty-common"
version = "0.1.0"
edition = "2021"
description = "Shared utilities (CLI init, port binding, data dir, OpenRouter client) for trusty-* projects"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5"
colored = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
