[package]
name = "trusty-embedder"
version = "0.1.0"
edition = "2021"
description = "Shared embedding abstraction + fastembed-backed implementation for trusty-* projects"
license = "MIT"

[features]
default = []
test-support = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fastembed = "5"
lru = "0.12"
parking_lot = "0.12"
tokio = { workspace = true }
tracing = { workspace = true }
