[package]
name = "trusty-mcp-core"
version = "0.1.0"
edition = "2021"
description = "Shared JSON-RPC 2.0 / MCP types and stdio runner for trusty-* projects"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
