[package]
name = "trusty-search-core"
version = "0.2.3"
edition = "2021"
description = "Core library for trusty-search: BM25, HNSW vector search, tree-sitter chunking, KG expansion, query classification"
license = "MIT"
repository = "https://github.com/bobmatnyc/trusty-search"
homepage = "https://github.com/bobmatnyc/trusty-search"
keywords = ["search", "code-search", "bm25", "vector-search", "tree-sitter"]
categories = ["development-tools", "algorithms"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

# Storage
usearch = "2.25"
redb = "2.6"

# Embedding (extracted to shared crate)
trusty-embedder = { workspace = true, features = ["test-support"] }
# Shared entity types (no tree-sitter dep)
trusty-contracts = { workspace = true }

# Code parsing
tree-sitter = "0.24"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-scala = "0.24"
# Pinned to versions whose generated parsers target tree-sitter ABI 14.
# Newer releases (c-sharp 0.23.5, swift 0.7) target ABI 15 and require
# tree-sitter 0.25+. tree-sitter-kotlin-ng 1.1 is ABI-compatible with 0.24.
tree-sitter-c-sharp = "=0.23.0"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "=0.6.0"

# Platform dirs (persistent model cache)
dirs = "5"

# Indexing
regex = "1"
lru = "0.12"
walkdir = "2"
sha2 = "0.10"
rayon = "1"
petgraph = "0.6"
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"

# ONNX NER (optional feature, gated by model file presence at runtime).
# Pulled in only with `--features ner` so the default build doesn't compile
# the ONNX runtime.
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[features]
default = []
# Exposes test doubles (e.g. `MockEmbedder`) outside `cfg(test)` so other
# crates in the workspace — and downstream integration tests — can reuse them.
test-support = []
# Compile in the ONNX NER extractor. Even with this feature on, NER stays
# inert at runtime unless `~/.trusty-search/models/ner.onnx` is present.
ner = ["dep:ort", "dep:tokenizers"]
# GPU-accelerated embedding via fastembed-rs CUDA backend. Forwarded to
# `trusty-embedder/cuda`. Default builds stay CPU-only; opt in with
# `--features cuda` (requires CUDA toolkit + compatible NVIDIA GPU).
cuda = ["trusty-embedder/cuda"]
# Apple Silicon GPU/ANE acceleration. Forwarded to `trusty-embedder/coreml`,
# which injects ONNX Runtime's CoreML execution provider into the fastembed
# session so embeddings run on M-series GPU instead of CPU. macOS only; opt
# in with `--features coreml`.
coreml = ["trusty-embedder/coreml"]
