[package]
name = "trusty-search-mcp"
version = "0.1.6"
edition = "2021"

[dependencies]
trusty-search-core = { path = "../trusty-search-core" }
trusty-search-service = { path = "../trusty-search-service" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
