[package]
name = "trusty-search-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP server (stdio + HTTP/SSE) for trusty-search hybrid code search"
license = "MIT"
repository = "https://github.com/bobmatnyc/trusty-search"
homepage = "https://github.com/bobmatnyc/trusty-search"
keywords = ["mcp", "search", "code-search", "ai", "json-rpc"]
categories = ["development-tools", "network-programming"]

[dependencies]
trusty-search-core = { version = "0.2.0", path = "../trusty-search-core" }
trusty-search-service = { version = "0.2.0", path = "../trusty-search-service" }
trusty-mcp-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
futures-util = "0.3"
