[package]
name = "trusty-search-service"
version = "0.1.7"
edition = "2021"

[dependencies]
trusty-search-core = { path = "../trusty-search-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
fs4 = { version = "0.8", features = ["sync"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
