[package]
name = "trusty-search-service"
version = "0.1.7"
edition = "2021"

[dependencies]
trusty-search-core = { path = "../trusty-search-core" }
trusty-common = { workspace = true, features = ["axum-server"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
fs4 = { version = "0.8", features = ["sync"] }
dirs = "5"
dashmap = { workspace = true }
walkdir = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
include_dir = { workspace = true }
sha2 = "0.10"
crossbeam-utils = "0.8"

[dev-dependencies]
tempfile = "3"
