[package]
name = "trusty-search-service"
version = "0.2.2"
edition = "2021"
description = "Axum HTTP daemon, file watcher, and client for trusty-search"
license = "MIT"
repository = "https://github.com/bobmatnyc/trusty-search"
homepage = "https://github.com/bobmatnyc/trusty-search"
keywords = ["search", "code-search", "axum", "daemon", "mcp"]
categories = ["development-tools", "web-programming::http-server"]
build = "build.rs"
include = ["src/**/*", "build.rs", "ui-dist/**/*", "Cargo.toml", "README.md"]

[dependencies]
trusty-search-core = { version = "0.2.2", path = "../trusty-search-core" }
trusty-common = { workspace = true, features = ["axum-server"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
notify = "6"
notify-debouncer-mini = "0.4"
fs4 = { version = "0.8", features = ["sync"] }
dirs = "5"
dashmap = { workspace = true }
walkdir = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
include_dir = { workspace = true }
sha2 = "0.10"
crossbeam-utils = "0.8"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
